[Delete] vscode folder tracking

--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,11 @@ testApp
 coverage
 
 ############################
+# Editors
+############################
+.vscode
+
+############################
 # Strapi
 ############################
 
