--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,11 @@ coverage
 .vscode
 
 ############################
+# Platform
+############################
+.platform
+
+############################
 # Strapi
 ############################
 
