[Update] Platform required files

--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -1,6 +1,6 @@
 "https://www.{default}/":
     type: upstream
-    upstream: "portfolioServer:http"
+    upstream: "portfolio_server:http"
 
 "https://{default}/":
     type: redirect
