[Delete] Platform config

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@strapi/plugin-users-permissions": "4.9.1",
     "@strapi/strapi": "4.9.1",
     "better-sqlite3": "8.0.1",
+    "path": "^0.12.7",
     "pg": "^8.11.1",
+    "platformsh-config": "^2.4.1",
     "strapi-plugin-responsive-image": "^1.0.1"
   },
   "author": {
